Slight Resources style shifts/fixes

--- a/assets/styles/resources.scss
+++ b/assets/styles/resources.scss
@@ -4,6 +4,10 @@ body {
   counter-reset: c;
 }
 
+header {
+  margin-bottom: 6rem;
+}
+
 .hero {
   width: 100%;
   background: white;
@@ -45,23 +49,62 @@ body {
   }
   
   & .link-wedges {
-    max-width: 50%;
-    max-height: 4rem;
+    max-width: 75%;
+    max-height: 6rem;
     display: flex;
     
     margin-top: 7rem;
     margin-left: auto;
     margin-right: auto;
     
+    box-shadow: 1px 1px 2px #777;
+    
     & > .wedge {
-      max-width: 25%;
       min-height: 4rem;
-      overflow: hidden;
+      
+      // ===== Icon stuff =====
+      &:before {
+        color: white; 
+        font-size: 5rem;
+        padding: 2rem;
+        position: relative;
+      }
+      &.icon-briefcase:before {
+        top: 3px;
+        left: 4px;
+      }
+      &.icon-compass:before {
+        top: 4px;
+        left: 38%;
+      }
+      &.icon-tie:before {
+        top: 4px;
+        left: 4px;
+      }
+      &.trl:before {
+        font-family: $header-font-family;
+        content: 'TRL';
+      }
+      
+      // ===== Link stuff =====      
+      &:hover {
+        cursor: pointer;
+        
+        & > .wedge-link {
+          top: -7rem; 
+          z-index: 1;
+        }
+        
+      }
       
       & > .wedge-link {
-        max-height: 0;
-        min-height: 0;
-        height: 0;
+        display: block;
+        width: 50rem;
+        
+        position: relative;
+        z-index: -1;
+        
+        font-family: $body-font-family;
       }
       
       &:nth-child(0n + 1) {
